# monitor

./: .gitignore  CMakeLists.txt  MainWindow.cpp  MainWindow.h  README.md  config.cpp  config.h  logger.cpp  monitor.cpp  myhook.cpp  rebuild.bat  resource.rc  style.css  util.cpp  util.h
logs/: 2025-12-19_020820.txt  2025-12-22_131757.txt  2025-12-22_132642.txt  2025-12-22_135234.txt  2025-12-22_141401.txt  2025-12-22_142928.txt  2025-12-22_150436.txt
myhook/: clean.bat  config.cpp  config.h  logger.cpp  logger.h  myhook.cpp  resource.h  util.cpp  util.h
recorder_ui/: MainWindow.cpp  MainWindow.h  main.cpp  resources.qrc
